--- a/src/main/resources/templates/list-employees.html
+++ b/src/main/resources/templates/list-employees.html
@@ -3,9 +3,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<span> Hi </span>
-<span th:text="${employees}"/>
+
+<div class="container mt-5">
+    <h1> Employee table </h1>
+    <br>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-8 row mx-auto">
+            <table class="table table-stripped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="employee : ${employees}">
+                        <td th:text="${employee.firstName}" />
+                        <td th:text="${employee.lastName}" />
+                        <td th:text="${employee.email}" />
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 </body>
 </html>
