--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -9,7 +9,8 @@
 
 <div class="container mt-5">
     <h1> Employee table </h1>
-    <br>
+    <hr>
+    <a th:href="@{/employees/add-employees}" class="btn btn-primary"> Add Employee </a>
     <br>
     <br>
     <div class="row">
