--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -21,6 +21,7 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Email</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -28,6 +29,9 @@
                         <td th:text="${employee.firstName}" />
                         <td th:text="${employee.lastName}" />
                         <td th:text="${employee.email}" />
+                        <td>
+                            <a th:href="@{/employees/updateEmployee(employeeId=${employee.id})}" class="btn btn-info"> Update </a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
