Delete  employee button and functionality

--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -31,6 +31,9 @@
                         <td th:text="${employee.email}" />
                         <td>
                             <a th:href="@{/employees/updateEmployee(employeeId=${employee.id})}" class="btn btn-info"> Update </a>
+                            <a th:href="@{/employees/deleteEmployee(employeeId=${employee.id})}"
+                               th:onclick="if(!confirm('Are you sure you want to delete this employee ?')) {return false;}"
+                               class="btn btn-danger"> Delete </a>
                         </td>
                     </tr>
                 </tbody>
