--- a/src/main/resources/templates/custom-login-form.html
+++ b/src/main/resources/templates/custom-login-form.html
@@ -17,6 +17,9 @@
                 </div>
                 <div class="card-body">
                     <form th:action="@{/authenticateTheUser}" method="POST">
+                        <div th:if="${param.error}"  class="alert alert-danger">
+                            <i> You entered an invalid username / password </i>
+                        </div>
                         <div class="form-group">
                             <label>User Name</label>
                             <input name="username" type="text" class="form-control" placeholder="enter your username"
