--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -8,7 +8,13 @@
 <body>
 
 <div class="container mt-5">
-    <h1> Employee table </h1>
+    <div class="d-flex justify-content-between align-items-center">
+        <h1> Employee table </h1>
+        <form th:action="@{/logout}" method="POST">
+            <input type="submit" value="Logout">
+        </form>
+    </div>
+
     <hr>
     <a th:href="@{/employees/add-employees}" class="btn btn-primary"> Add Employee </a>
     <br>
