--- a/src/main/resources/templates/employees/list-employees.html
+++ b/src/main/resources/templates/employees/list-employees.html
@@ -19,9 +19,12 @@
     <hr>
     <p> User:  <span sec:authentication="principal.username"></span></p>
     <p> Role(s):  <span sec:authentication="principal.authorities"></span></p>
-    <a th:href="@{/employees/add-employees}" class="btn btn-primary">
-        Add Employee
-    </a>
+    <div sec:authorize="hasRole('ADMIN')">
+        <a th:href="@{/employees/add-employees}" class="btn btn-primary">
+            Add Employee
+        </a>
+    </div>
+
     <br>
     <br>
     <div class="row">
@@ -42,9 +45,12 @@
                         <td th:text="${employee.email}" />
                         <td>
                             <a th:href="@{/employees/updateEmployee(employeeId=${employee.id})}" class="btn btn-info"> Update </a>
-                            <a th:href="@{/employees/deleteEmployee(employeeId=${employee.id})}"
-                               th:onclick="if(!confirm('Are you sure you want to delete this employee ?')) {return false;}"
-                               class="btn btn-danger"> Delete </a>
+                            <div sec:authorize="hasRole('ADMIN')">
+                                <a th:href="@{/employees/deleteEmployee(employeeId=${employee.id})}"
+                                   th:onclick="if(!confirm('Are you sure you want to delete this employee ?')) {return false;}"
+                                   class="btn btn-danger"> Delete
+                                </a>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
