Adding registration functionality

--- a/src/main/resources/templates/custom-login-form.html
+++ b/src/main/resources/templates/custom-login-form.html
@@ -35,8 +35,8 @@
                                    placeholder="enter your password"
                                    required>
                         </div>
-
                         <button type="submit" class="btn btn-primary btn-block"> Log In</button>
+                        <a th:href="@{/register/showRegistrationForm}" class="btn btn-secondary btn-block mt-3"  > Register </a>
                     </form>
                 </div>
             </div>
